--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .text-gradient {
+    @apply bg-clip-text text-transparent bg-gradient-to-r;
+  }
+  .absolute-center {
+    @apply absolute z-50 transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2;
+  }
+}
