--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -10,7 +10,7 @@ main {
   padding: 0;
   box-sizing: border-box;
   font-family: 'VT323', 'Courier New', Courier, monospace;
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   background: url(/src/assets//images/bgPattern.svg);
 }
