--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11,7 +11,7 @@ main {
   box-sizing: border-box;
   font-family: 'VT323', 'Courier New', Courier, monospace;
   max-width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background: url(/src/assets//images/bgPattern.svg);
 }
 
