--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11,6 +11,7 @@ main {
   box-sizing: border-box;
   font-family: 'VT323', 'Courier New', Courier, monospace;
   max-width: 100vw;
+  max-height: 100vh;
   height: 100dvh;
   background: url(/src/assets//images/bgPattern.svg);
 }
